@@ -96,7 +96,8 @@ public class PreviousDegreeOriginInformationFormControllerBlueRecord extends Pre
 
     @Override
     protected Registration getRegistration(final ExecutionYear executionYear, final Model model) {
-        return findPreviousDegreePrecedentDegreeInformationsToFill(executionYear, getStudent(model)).get(0).getRegistration();
+        return findPreviousDegreePrecedentDegreeInformationsToFill(executionYear, getStudent(model)).get(0).getStudentCandidacy()
+                .getRegistration();
     }
 
     @Override
