@@ -1,3 +1,5 @@
+- Refactor: Upgraded dependency of fenixedu-academic-core (Removed deprecated relation between PrecedentDegreeInformation and Registration)
+
 6.7.0 (04-03-2020)
 - Refactor: Upgraded dependency of fenixedu-academic-core (Removed deprecated relation between PrecedentDegreeInformation and PersonalIngressionData)
 
